--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                 <div class="row">
                     <div class="col-lg-10">
                         <h1 class="display-4 fw-bold" data-aos="fade-up">Olá tudo bem? prazer me chamo Kauê</h1><span class="text-brand">Desenvolvedor Back-end Java</span> </h1>
-                        <p class="lead mt-2 mb-4" class="text-brand3" data-aos="fade-up" data-aos-delay="300"><span class="text-brand3">Minha paixão por tecnologia surgiu dez de quando era pequeno e tinha 10 anos quando conehci o mundo da tecnologia acebei me apaixonando sempre fui curioso e bastante esforçado em descobrir coisas novas,com 14 anos descobri o mundo
-                            da programação por meio de colegas e familiares dez de então vim me qualificando para chegar no meu objetivo atualmente sou estudante de ciencias da computação e estou no 3°semestre formado em desenvolvimento de software pela
-                            ETEC paulo carmo monteiro curso tecnico.</span></p>
+                        <p class="lead mt-2 mb-4" class="text-brand3" data-aos="fade-up" data-aos-delay="300"><span class="text-brand3">Minha paixão por tecnologia surgiu quando eu tinha 10 anos. Conheci o mundo da tecnologia e me apaixonei. Sempre fui curioso e me esforcei para descobrir coisas novas. Com 14 anos, descobri o mundo da programação graças a colegas e familiares. Desde então, venho me qualificando para alcançar meu objetivo atual. Atualmente, sou estudante de Ciência da Computação e estou no terceiro semestre. Formei-me em Desenvolvimento de Software pela ETEC Paulo Carmo Monteiro, um curso técnico que possibilitou eu ganhar diferente.</span></p>
                         <div data-aos="fade-up" data-aos-delay="600">
 
                             <a href="#" class="link-custom">Celular:11987482173</a>
@@ -96,8 +94,8 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-feather"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Desenvolvedor Back-end Java</h5>
-                            <p class="text-brand2">Experiencia com linguagem de programação java orientada a objetos juntamente com o desenvolvimento de banco de dados utilizando MySQL.</p>
+                            <h5 class="mt-4 mb-2">Desenvolvedor Fullstack Java</h5>
+                            <p class="text-brand2">Experiência em desenvolvimento de aplicações para web utilizando java para rodar no lado do servidor e HTML,CSS,JAVASCRIPT para rodar do lado do cliente utilizando a interface do usuário.</p>
 
                         </div>
                     </div>
@@ -107,8 +105,8 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-pencil-ruler"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Estudando</h5>
-                            <p class="text-brand2">Atualmente estou estudando desenvolvimento de software com linguagem de programação Java.</p>
+                            <h5 class="mt-4 mb-2">Estudante de desenvolvimento de Software</h5>
+                            <p class="text-brand2">Atualmente estou em busca de novos desafios com desenvolvimento de software utilizando Java.</p>
                         </div>
                     </div>
 
@@ -117,8 +115,8 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-laptop-code"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Desenvolvedor Front-end</h5>
-                            <p class="text-brand2">Experiência com linguagem de programação JavaScript e React.js.</p>
+                            <h5 class="mt-4 mb-2">Experiência em desenvolvimento Front-end</h5>
+                            <p class="text-brand2">Busco sempre entender o lado do cliente utilizando as táticas de desenvolvimento de Design UX/UI com base nisso utilizo a linguagem de progrmação Java Script e a biblioteca React.js.</p>
 
                         </div>
                     </div>
@@ -134,7 +132,7 @@
 
                 <div class="row pb-4" data-aos="fade-up">
                     <div class="col-lg-8">
-                        <h6 class="text-brand">Meus Trabalhos</h6>
+                        <h6 class="text-brand">Projetos pessoais</h6>
                         <h1>Projetos mais recentes</h1>
                     </div>
                 </div>
@@ -148,7 +146,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Animais fantásticos</h4>
-                                <p class="text-brand2">Projeto desenvolvido com tecnologias HTML,CSS,JAVASCRIPT e SASS utilizando o formato em grid o intuito do desenvolvimento foi aprimorar os meus conhecimentos em JavaScript e Grid.
+                                <p class="text-brand2">O principal objetivo desse projeto foi aplicar meus conhecimentos de JavaScript juntamente com apredizado do metodo de desenvolvimento com GRID no css.
                                 </p>
                                 <a href="https://ikauematos.github.io/web-design-animais.js/
                                 " class="link-custom">Clique aqui</a>
@@ -163,8 +161,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Apeperia</h4>
-                                <p class="text-brand2">Esse projeto foi desenvolvido em Html,Css e Java Script o foco principal desse projeto e acessibilidade a maneira que o site ira se comportar com usuário que tem alguma deficiência física e importante pensar em todos os
-                                    tipos de usuário e maneiras de se comunicar com os mesmos ! Tecnologias utilizadas:Html,Css e JavaScript</p>
+                                <p class="text-brand2">Projeto desenvolvido com intuito de aprender o metodo correto de aplicar a acessibilidade para deficientes visuais.</p>
                                 <a href="https://ikauematos.github.io/Apeparia---acessibilidade/" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
@@ -176,7 +173,7 @@
                                 <img class="rounded-4" src="./assets/images/pacman.png" alt="Projeto Pacman realizado em Python">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Software Pacman</h4>
+                                <h4>Software Mini-game Pacman</h4>
                                 <p class="text-brand2">Esse projeto foi desenvolvido com a linguagem de programação python proposto pela UNIP juntamente com biblioteca pygame o objetivo desse projeto era ilustrar o sustentabilida vontada para carbono neutro e mercado de credito
                                     de carbono.</p>
                                 <a href="https://github.com/iKaueMatos/Software.Aps-Pacman.py" class="link-custom">Clique aqui</a>
@@ -193,7 +190,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Landing Page Alura books </h4>
-                                <p class="text-brand2">Projeto proposto pela alura com método de desenvolvimento Mobile-first onde desenvolvemos primeiro o layout mobile e logo em seguida vamos mudando para respectivas telas por exemplo de tablet e desktop(monitor).
+                                <p class="text-brand2">Projeto desenvolvido com base no metodo Mobile-first onde possibilita que programador faça primeiramente a interface para dispositivos mobile e após a conclusão desenvolva para os respectivos dispositivos.
                                 </p>
                                 <a href="https://ikauematos.github.io/Books---Mobile-first/" class="link-custom">Clique aqui</a>
                             </div>
@@ -207,7 +204,8 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Hora de aventura React.js</h4>
-                                <p class="text-brand2">Projeto desenvolvido com React.js com intuito de adicionar personagens do desenho de hora de aventura via links da web. O que foi possivel aprender com o desenvolvimento? • Usestate Compants • Props • Criação de componentes
+                                <p class="text-brand2">Projeto desenvolvido com a biblioteca React.js com intuito de adicionar personagens do desenho hora de aventura via links da web. O que foi possivel aprender com o desenvolvimento? foi a utilizanção de props,UseState e
+                                    criação de objetos por meio de listas.
                                 </p>
                                 <a href="https://project-hora-aventura-card-add-25gb.vercel.app" class="link-custom">Clique aqui</a>
                             </div>
@@ -294,7 +292,7 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Trabalho voluntario</h4>
                                     <p class="text-brand mb-2">Delicias G&M (04/2021 - 11/2021) </p>
-                                    <p class="text-brand2" class="text-brand mb-2" class="mb-0">Atividades:Criação de Website para divulgação de alimentos,projeto proposto pela escola tecnica ETEC.</p>
+                                    <p class="text-brand2" class="text-brand mb-2" class="mb-0">Atividades:Criação de Website para divulgação de alimentos e compra,projeto proposto pela escola tecnica ETEC PAULO DO CARMO MONTEIRO.</p>
                                 </div>
                             </div>
 
@@ -409,7 +407,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">12 Março,2022</p>
-                                <h5 class="mb-4">Java</h5>
+                                <h5 class="mb-4">Java orientado a objetos</h5>
                                 <a href="#" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
@@ -433,18 +431,17 @@
                     </div>
 
                     <div class="col-lg-8" data-aos="fade-up" data-aos-delay="300">
-                        <form action="#" class="row g-lg-3 gy-3">
+                        <form action="https://formsubmit.co/ikauedeveloper@gmail.com" method="POST" class="row g-lg-3 gy-3">
                             <div class="form-group col-md-6">
-                                <input type="text" class="form-control" placeholder="Digite seu nome:">
+                                <input type="text" class="form-control" placeholder="Digite seu nome:" required>
+
                             </div>
                             <div class="form-group col-md-6">
-                                <input type="email" class="form-control" placeholder="Digite seu email:">
+                                <input type="email" class="form-control" placeholder="Digite seu email:" required>
                             </div>
+
                             <div class="form-group col-12">
-                                <input type="text" class="form-control" placeholder="Assunto">
-                            </div>
-                            <div class="form-group col-12">
-                                <textarea name="" rows="4" class="form-control" placeholder="Enviar mensagem"></textarea>
+                                <textarea name="text" rows="4" class="form-control" placeholder="Assunto"></textarea>
                             </div>
                             <div class="form-group col-12 d-grid">
                                 <button type="submit" class="btn btn-brand">Enviar</button>
