--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
                 <div class="row pb-4" data-aos="fade-up">
                     <div class="col-lg-8">
-                        <<<<<<< HEAD <h6 class="text-brand">Projetos pessoais</h6>
-                            =======
+                       <h6 class="text-brand">Projetos pessoais</h6>
+                           
                             <h6 class="text-brand">Projetos</h6>
-                            >>>>>>> 44d207fe4e41daee4e1438733b589d26d5d6f717
+                         
                             <h1>Projetos mais recentes</h1>
                     </div>
                 </div>
